# ChangeLog for dev-libs/nss
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/ChangeLog,v 1.394 2014/12/04 08:22:33 jer Exp $

  04 Dec 2014; Jeroen Roovers <jer@gentoo.org> nss-3.17.2.ebuild:
  Stable for HPPA (bug #531618).

*nss-3.17.3 (04 Dec 2014)

  04 Dec 2014; Lars Wendler <polynomial-c@gentoo.org> -nss-3.16.ebuild,
  -nss-3.16.3.ebuild, -nss-3.17.1.ebuild, +nss-3.17.3.ebuild:
  Version bump by arfrever (bug #531622). Removed old.

  04 Nov 2014; Markus Meier <maekke@gentoo.org> nss-3.16.5.ebuild:
  arm stable, bug #523652

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.16.5.ebuild:
  Stable for sparc, wrt bug #523652

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.16.5.ebuild:
  Stable for ia64, wrt bug #523652

  17 Oct 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.16.5.ebuild:
  Stable for ppc64, wrt bug #523652

  17 Oct 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.16.5.ebuild:
  Stable for ppc, wrt bug #523652

  15 Oct 2014; Tobias Klausmann <klausman@gentoo.org> nss-3.16.5.ebuild:
  Stable on alpha, bug 523652

*nss-3.16.6 (14 Oct 2014)
*nss-3.17.2 (14 Oct 2014)

  14 Oct 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> +nss-3.16.6.ebuild,
  +nss-3.17.2.ebuild, -nss-3.16.2.1.ebuild, nss-3.16.5.ebuild,
  nss-3.17.1.ebuild:
  fixed configuration for 64bit non-multilib targets like alpha on 3.16.5 and
  above, fixed occasional linking-to-system-libs issue on 3.16.6 and above,
  added new versions, removed unnecessary and buggy 3.16.2.1

*nss-3.16.2.1 (14 Oct 2014)

  14 Oct 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> +nss-3.16.2.1.ebuild,
  -nss-3.15.5.ebuild, -nss-3.16.4.ebuild, -nss-3.17.ebuild:
  added nss-3.16.2.1 as a vulnerability-free stopgap ebuild for alpha, maybe
  others ; removed as many old vulnerable versions as keywords allow, bug 523652

  06 Oct 2014; Agostino Sarubbo <ago@gentoo.org> nss-3.16.5.ebuild:
  Stable for x86, wrt bug #523652
