@@ -4,17 +4,17 @@ Hash: SHA256
 AUX librsvg-2.40.1-gtk-optional.patch 2184 SHA256 060ad4965c51d334da543970f959022d519bd3e714c1ee22c4cf9081e875c1e3 SHA512 7232fab1817066469d43f29e3c338312e8ead15e1aa6b236bd6e1bb6a3f4c903f41467e3790c8011e5670370ee3292520212b63b458b8ab1341f3dbb1adc16c2 WHIRLPOOL 59813105025e68854d155dc6f051ac7ce06c18aa5903f910b079b84ee5882e2d626d971b539c07b701125c6489ed1dac5e519909084fb26e637e10d48839543e
 AUX librsvg-2.40.2-vala-out-of-source.patch 1066 SHA256 0b32e55884d4263335976f241f32b78ceb52f78c94478f252e408881d4d942e2 SHA512 6a8e8035183a965c7359c6258cde5a842c2eda662a9ccebbe27ea27eb978591255664a837124e65f25e2653980c354c6c4b9ae11427cc27fe46ccfcdcde8102f WHIRLPOOL f76ab2f925fe9387b087b40cc477a85fa7869f25830645609ae08b585868040129598f769e60f65a9d4f7ba0dcbddfcb4e8184e8e8f7f8fecc1351b0d80340aa
 DIST librsvg-2.40.2.tar.xz 506048 SHA256 48049b643294636df7de1a4b997414d699666f5dc44776945c218a257d2a291c SHA512 ecb144f8f02240f44edc4baf372477d6a8436abfcabad0e9fdce9cd629ace819f14d0c8174d9522b4cc63429031a1ecb611bbdabbdb432ec3f211cf331208f84 WHIRLPOOL 8063369ec5b5764c8dcdda47ba184efbcb13aa7b0683028f1c5bf795c02237c48a1403a6503beedaf2fdc76b2ff05eb37a0e5031496ee4ab206b9020a70e8e93
-DIST librsvg-2.40.4.tar.xz 509324 SHA256 db76d5494e867613bbb0664e969f7d03296296495ec117f276ccf8f505cd9573 SHA512 effb6de6042cc89d9ce01a80058f09b2f4bee43055d07e4b4fb35120f5283e93073221c9453ec03fbb42c71b30202b3febeb5607c9b62c46d2a00ac233a55ed1 WHIRLPOOL 4b1ca9b0738fc58d34bf77ec09a2f3c91f6338f9797eedc09486efe9b3c04f2af1858802babc0a51d3d08fd60374155ef5b4df5da54365f79dffba929b00fcac
 DIST librsvg-2.40.5.tar.xz 509556 SHA256 d14d7b3e25023ce34302022fd7c9b3a468629c94dff6c177874629686bfc71a7 SHA512 57a82d2a9c7f77e503db3127d423cd58e947b3a32be1b2b9c78cf1dc9a35acc00ee79ec115737c95958f29b60f0a4ac384e97f090f027ede70dd3cb19c025938 WHIRLPOOL 35edc70c1cf2c0b1d3d77fa6f4bb012bc613c9ea1665b73ff3f882f83b609c46450fe3ca40a4fa59607b697b304065220c4c714e505df9bea6104397e7bac51b
+DIST librsvg-2.40.6.tar.xz 512500 SHA256 8af349f241677b04b7a1ea6b9b33a6343e781bcccc8a09d00208a47342584f06 SHA512 8d901d5d6dde2721db9cb05740ce42fa2520f2f6cc8136a8cb0306b5e6e630166d25da917d169c8d4e11fcfb7834ccb1fe93188f5e9c02c4cddff989d0cf3c51 WHIRLPOOL 99a335a76f31f7474780958d30eb4fe9a950b725d9559c8825e9a268248a56ce9c5048cac2914a99cb3ea9a5787b3de63e32e4b97c09880c994e19845a7f3768
 EBUILD librsvg-2.40.2-r1.ebuild 2844 SHA256 d999c0361cdcee2acacd11c8fe23d2dbd0d2f382a1ea03a5ce74ff958243514b SHA512 403fb34aba9dfbbfe1441aced4fd722fb5d7b67ee8d8dfbd4fd5dd1b83ef605f4185394bccc8e88c0e27c8b9ecc3839909a07d5dc6cb24e03626ef261d21a8ca WHIRLPOOL 68c63442efd4a1220f89716db013217b06a133f6bec50520bafe5758c513fa91f1850eb2a3142c4650cea0c780db7e6e17b8808ba82c9471e188a7c837e3f2c2
-EBUILD librsvg-2.40.4.ebuild 2858 SHA256 6b5510cc889d42c4add22513c57b64ff1d58e493cec3a1f2cc6843e170c29bf4 SHA512 2a85490936741a947417cee947d959b5c0a32934c7329cb39395f59357ee830f64c85e2a3d4cd0a6a1aa8ac6c7824d6cabe981aa7ea07df9b8bda2cb70419ab3 WHIRLPOOL be13c25e7236c115fa29c5b32a773e3e31ecee432139bef0e27a9a414eca1e1b59e5044f843a69f992bb74e81c42df0a28863625df169690e73e785869aefc73
 EBUILD librsvg-2.40.5.ebuild 2858 SHA256 de6fded7c9f4e18a419dc49e7560070f46e651ead0abcbcfcd8f25264e1f342a SHA512 80119e14d2e24e01660964176f8b2b47269264fd5219195d2c3e666f11337599b8da3feb3eabede2eda47caa64ae4b5e737f990806808a4195afe25766d06ba4 WHIRLPOOL 4158082ee03ee308b6fd25648dab92228862dc40446905fb745a4be16de978fed0d5722f35a2f34a472fd7e4f6f1d5a217e818d7c9f4723a59f70896f5f67cab
-MISC ChangeLog 47605 SHA256 c834a0f92e6a6976682ba4283022bf3567d273ae1392d545f85737e8977b89f3 SHA512 cbd04253dc9fdd1d11bcb4ede01927f7feabf8916c03bdb654267a29b1a1887f8e521581bf79ab3291d2ef7cd37cc9ed3c55f3e8c88271336f67584466c6e857 WHIRLPOOL 743c083118eec2ef2f82a3520234abf38bdd39ea82ba1c0f7815f972a79a4dd499e918083cf2461a67930abe84bf295e17d85ff460b71b245bb8036e24c04d76
+EBUILD librsvg-2.40.6.ebuild 2858 SHA256 61c26b11f07538b851adb1699d33042a1c3f7942e97dcb17bc166fe236e77b95 SHA512 e4109140094e5ac83bbc4c45a4f54116861e4ca30d671b09a0c9d9b387ec71446c16b058deefd345c45458b929902aa6bc80c429ccceed4e4717c6b1b7ed4fbc WHIRLPOOL 0971156750635c0a18bb74dd7863b39936b7eb394372cbf03b092d66308996cfc82028c270af8baaab933f7f616c2cd6fe09f3d9947b2dfe03d3c2b362902d66
+MISC ChangeLog 47758 SHA256 f29f2c50fe193bc1a15ff1ae7d205fce302ec7de26aa37f49c24447af70234eb SHA512 fbb62cce4bf6ff26dec3d2982587b8deee40efacb2d6070672dd1262e075d74fafd5e0ee9c914acdd3a90de533ec2f51d01375af032ee23f3d9e933c0bb33169 WHIRLPOOL d3d967cdb278bc404109695902082119f14795c5ac21964df3de620189185bbed09382d7bb48bb2ad700da8913d683dfcd771b5563a26c50bc57e58b31161468
 MISC metadata.xml 391 SHA256 4204d8b4ba91f579bf4c6db6564541b44257cbd736ca860ddd2ba650ae1b1fba SHA512 7f80de10e7a4e4368d8566e61f14cd0423cee5d8b3bc2e2c04d1a55f3ea86007cf0a9f6cf05dfd3b98a5b58795d36d32b326564791f9a68fa7476bdad0f275ac WHIRLPOOL 707dd74d92cb0ab17509a56f315cc99daf765732c63613388fbb87e2e8812b56d429bddad17be7ed07f653837eaf5fb55888b3958ea0c2790d2697f0451e0692
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlQ884kACgkQCaWpQKGI+9ShnQCeMpBqGTTQdhA5BJDZSU6piLsd
-IGAAn3f307pI3MbMAl/TxpjIIZdPMXcE
-=GK4O
+iEYEAREIAAYFAlSBp9wACgkQCaWpQKGI+9RKUQCfdOrdwvcEk9NbqubzERRQuoAl
+nBYAn0wHfQxLyGEpLqDbzLXWGUaDhOo7
+=z4Qp
 -----END PGP SIGNATURE-----
