@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/librsvg/librsvg-2.40.4.ebuild,v 1.1 2014/10/02 11:57:00 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/librsvg/librsvg-2.40.6.ebuild,v 1.1 2014/12/05 12:40:59 pacho Exp $
 
 EAPI="5"
 GCONF_DEBUG="no"
