@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/librsvg
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/librsvg/ChangeLog,v 1.364 2014/10/14 09:57:28 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/librsvg/ChangeLog,v 1.365 2014/12/05 12:40:59 pacho Exp $
+
+*librsvg-2.40.6 (05 Dec 2014)
+
+  05 Dec 2014; Pacho Ramos <pacho@gentoo.org> +librsvg-2.40.6.ebuild,
+  -librsvg-2.40.4.ebuild:
+  Version bump, drop old
 
 *librsvg-2.40.5 (14 Oct 2014)
 
